--- a/templates/help.html
+++ b/templates/help.html
@@ -98,6 +98,17 @@
             </ul>
         </div>
 
+        <div class="help-section">
+            <h2>Important Notes</h2>
+            <ul>
+                <li>Decks are automatically deleted after 30 minutes</li>
+                <li>Download your deck files promptly after creation</li>
+                <li>Use exact card names for best results</li>
+                <li>Make sure quantities are numbers</li>
+                <li>Check "Ready Decks" to see your processed decklists</li>
+            </ul>
+        </div>
+
         <a href="/" class="back-button">Back to Search</a>
     </div>
 </body>
