--- a/templates/help.html
+++ b/templates/help.html
@@ -81,12 +81,12 @@
             <p>Each line should start with the quantity followed by the card name.</p>
             <h3>Advanced Search</h3>
             <p>You can also add some details, like the set and collectors number, like this:</p>
-            <code>4 Lightning Bolt slp 21<br>
+            <code>4 Lightning Bolt SLP 21<br>
                 3 Mountain PIP 324<br>
-                1 Goblin Guide 2xm 127<br>
-                1 Goblin Guide slp 23
+                1 Goblin Guide 2XM 127<br>
+                1 Goblin Guide SLP 23
             </code>
-            <p>Each line should start with the quantity followed by the card name, then the set code, and lastly, the collectors number.</p>
+            <p>Each line should start with the quantity followed by the card name, then the set code in upper case, and lastly, the collectors number.</p>
         </div>
 
         <div class="help-section">
